--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   intl: ^0.20.1
+  flutter_form_builder: ^7.0.0-alpha.3
 
 dev_dependencies:
   flutter_test:
