--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.20.1
   flutter_form_builder: ^7.0.0-alpha.3
   dio: ^5.7.0
+  onesignal_flutter: ^5.2.9
 
 dev_dependencies:
   flutter_test:
