--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_form_builder: ^7.0.0-alpha.3
   dio: ^5.7.0
   onesignal_flutter: ^5.2.9
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
