--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.7.0
   onesignal_flutter: ^5.2.9
   flutter_local_notifications: ^18.0.1
+  sentry_flutter: ^8.12.0
 
 dev_dependencies:
   flutter_test:
