--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   onesignal_flutter: ^5.2.9
   flutter_local_notifications: ^18.0.1
   sentry_flutter: ^8.12.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
