--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sentry_flutter: ^8.12.0
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
