--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   logger: ^2.5.0
+  flutter_secure_storage: ^9.2.3
 
 dev_dependencies:
   flutter_test:
