--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   permission_handler: ^11.3.1
   logger: ^2.5.0
   flutter_secure_storage: ^9.2.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
