--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   logger: ^2.5.0
   flutter_secure_storage: ^9.2.3
   cached_network_image: ^3.4.1
+  flutter_svg: ^2.0.16
 
 dev_dependencies:
   flutter_test:
