--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_secure_storage: ^9.2.3
   cached_network_image: ^3.4.1
   flutter_svg: ^2.0.16
+  envied: ^1.0.0
 
 dev_dependencies:
   flutter_test:
