--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_svg: ^2.0.16
   envied: ^1.0.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
