feat: add dotted_line for drawing dotted lines

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_svg: ^2.0.16
   envied: ^1.0.0
   flutter_screenutil: ^5.9.3
+  dotted_line: ^3.2.3
 
 dev_dependencies:
   flutter_test:
