--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dotted_line: ^3.2.3
   dotted_border: ^2.1.0
   lottie: ^3.3.0
+  flutter_svg_provider: ^1.0.7
 
 dev_dependencies:
   flutter_test:
