feat: add flutter_dotenv for loading environment variables

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dotted_border: ^2.1.0
   lottie: ^3.3.0
   flutter_svg_provider: ^1.0.7
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
