--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   lottie: ^3.3.0
   flutter_svg_provider: ^1.0.7
   flutter_dotenv: ^5.2.1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
