--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   jwt_decoder: ^2.0.1
   mockito: ^5.4.5
+  flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
