--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\flutter\flutter
-FLUTTER_APPLICATION_PATH=D:\flutter\flutter_starter_kit
+FLUTTER_ROOT=/opt/homebrew/Caskroom/flutter/3.24.4/flutter
+FLUTTER_APPLICATION_PATH=/Users/groot/Workspace/MAKRAZ/flutter-starter-kit
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
